<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/filmsRecyclerView"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:spanCount="2"
        tools:listitem="@layout/item_film_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.turingtechnologies.materialscrollbar.DragScrollBar
        android:id="@+id/scrollBar"
        android:alpha="0"
        app:msb_recyclerView="@id/filmsRecyclerView"
        app:msb_lightOnTouch="false"
        app:msb_handleColor="@color/colorAccent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</RelativeLayout>