...

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteButton"
            app:layout_anchor="@id/titleCard"
            app:layout_anchorGravity="end"
            app:tint="@color/white"
            tools:srcCompat="@drawable/ic_heart_outline"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
...
